# bolivar

./: .gitignore  .gitmodules  .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  bolivar.main.kts  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: dumppdf.rs  pdf2txt.rs
crates/core/: Cargo.toml
crates/core/benches/: alloc_bench.rs  alloc_guard_bench.rs  e2e_bench.rs  filters_bench.rs  layout_bench.rs  micro_plane_bench.rs  pdfdocument_bench.rs  pdfinterp_bench.rs  plane_bench.rs  png_predictor_bench.rs  psparser_bench.rs  table_bench.rs
crates/core/benches/common/: bytes_throughput.rs  criterion.rs  fixtures.rs  group_heavy.rs  group_light.rs  mod.rs  pages_throughput.rs  rng.rs  seed.rs  tier.rs
crates/core/examples/: profile_allocs.rs
crates/core/src/: casting.rs  cmapdb.rs  converter.rs  encodingdb.rs  error.rs  fontmetrics.rs  high_level.rs  layout.rs  lib.rs  pdfdevice.rs  pdfdocument.rs  pdffont.rs  pdfinterp.rs  pdfpage.rs  pdfparser.rs  pdfstate.rs  pdftypes.rs  psparser.rs  runlength.rs  security.rs  simd.rs  table.rs  truetype.rs  utils.rs
crates/core/src/api/: builder.rs  high_level.rs  mod.rs  stream.rs
crates/core/src/arena/: mod.rs  page_arena.rs  types.rs
crates/core/src/codec/: arcfour.rs  ascii85.rs  ccitt.rs  jbig2.rs  mod.rs
crates/core/src/converter/: base.rs  html.rs  mod.rs  text.rs  xml.rs
crates/core/src/document/: catalog.rs  mod.rs  page.rs  repair.rs  saslprep.rs  security.rs
crates/core/src/font/: cmap.rs  encoding.rs  mod.rs  pdffont.rs  truetype.rs
crates/core/src/image/: export.rs  image.rs  mod.rs
crates/core/src/interp/: device.rs  interpreter.rs  mod.rs
crates/core/src/interp/ops/: color.rs  graphics_state.rs  mod.rs  path.rs  text.rs  xobject.rs
crates/core/src/layout/: analysis.rs  arena.rs  bidi.rs  elements.rs  mod.rs  params.rs
crates/core/src/layout/analysis/: analyze.rs  clustering.rs  grouping.rs  mod.rs  soa.rs  soa_layout.rs  spatial_tree.rs
crates/core/src/layout/analysis/spatial/: distance.rs  frontier.rs  mod.rs  tree.rs  types.rs
crates/core/src/layout/elements/: character.rs  component.rs  container.rs  graphics.rs  item.rs  mod.rs  textbox.rs  textline.rs
crates/core/src/layout/table/: clustering.rs  collector.rs  edge_probe.rs  edges.rs  finder.rs  geometry.rs  grid.rs  intersections.rs  mod.rs  text.rs  types.rs
crates/core/src/layout/types/: character.rs  component.rs  container.rs  item.rs  textbox.rs  textline.rs
crates/core/src/model/: color.rs  mod.rs  objects.rs  state.rs
crates/core/src/parser/: lexer.rs  mod.rs  parser.rs  pdf_parser.rs
crates/core/src/utils/: casting.rs  data_structures.rs  mod.rs  utils_impl.rs
crates/core/tests/: aes_test.rs  alloc_guard_test.rs  arcfour_test.rs  arena_test.rs  ascii85_test.rs  bench_fixtures.rs  casting_test.rs  ccitt_test.rs  cmapdb_test.rs  content_lexer_test.rs  converter_test.rs  data_structures_test.rs  dumppdf_test.rs  encodingdb_test.rs  font_size_test.rs  high_level_test.rs  image_streaming_test.rs  image_test.rs  inline_image_test.rs  integration_test.rs  jbig2_test.rs  layout_analyze_arena_parity.rs  layout_arena_smoke.rs  layout_clustering_parity.rs  layout_group_objects_arena.rs  layout_group_textlines_arena.rs  layout_test.rs  layout_text_output_parity.rs  lzw_test.rs  nonfree_175_contents_test.rs  nonfree_175_objid_test.rs  nonfree_175_xref_test.rs  page_index_test.rs  parser_thread_safety_test.rs  pdf2txt_test.rs  pdfcolor_test.rs  pdfcontentparser_queue_test.rs  pdfdevice_test.rs  pdfdocument_bytes_test.rs  pdfdocument_test.rs  (+19 more)
crates/python/: Cargo.toml
crates/python/python/: bolivar_autoload.pth  bolivar_autoload.py
crates/python/python/bolivar/: __init__.py  _autoload.py  _bolivar.pyi  _native_api.py  _shim_registry.py
crates/python/python/pdfminer/: __init__.py  _bolivar_patch.py  arcfour.py  ascii85.py  casting.py  ccitt.py  cmapdb.py  converter.py  data_structures.py  encodingdb.py  fontmetrics.py  glyphlist.py  high_level.py  image.py  latin_enc.py  layout.py  lzw.py  pdfdevice.py  pdfdocument.py  pdfexceptions.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdftypes.py  psparser.py  runlength.py  utils.py
crates/python/python/pdfplumber/: __init__.py  _typing.py  cli.py  container.py  convert.py  display.py  page.py  pdf.py  repair.py  structure.py  table.py
crates/python/python/pdfplumber/utils/: clustering.py  generic.py  geometry.py  pdfinternals.py  text.py
crates/python/python/sitecustomize/: __init__.py
crates/python/src/: casting.rs  codec.rs  convert.rs  document.rs  font.rs  image.rs  layout.rs  lib.rs  params.rs  stream.rs  table.rs  utils.rs
crates/uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/uniffi/jvm/: .classpath  .project  build.gradle.kts  settings.gradle.kts
crates/uniffi/jvm/src/main/kotlin/io/bolivar/jvm/: Bolivar.kt  BolivarAsync.kt  BolivarNativeLoader.kt
crates/uniffi/jvm/src/main/kotlin/sa/ingenious/: BolivarDsl.kt  BolivarNativeLoader.kt  DataTypes.kt  DocumentOptions.kt  bolivar.kt
crates/uniffi/jvm/src/main/kotlin/sa/ingenious/bolivar/: Bolivar.kt  BolivarAsync.kt  BolivarDsl.kt  BolivarException.kt  BolivarNativeLoader.kt  DataTypes.kt  DocumentOptions.kt  LayoutParams.kt  PdfDocument.kt
crates/uniffi/jvm/src/test/java/io/bolivar/jvm/: BolivarJavaCompileTest.java
crates/uniffi/jvm/src/test/java/sa/ingenious/: BolivarJavaCompileTest.java
crates/uniffi/jvm/src/test/kotlin/io/bolivar/jvm/: BolivarNativeLoaderTest.kt
crates/uniffi/jvm/src/test/kotlin/sa/ingenious/: DocumentOptionsBuilderTest.kt  PdfDocumentBehaviorTest.kt
crates/uniffi/jvm/src/test/kotlin/sa/ingenious/bolivar/: DocumentOptionsBuilderTest.kt  (+1 more)
crates/uniffi/kotlin/io/bolivar/: bolivar.kt
crates/uniffi/kotlin/sa/ingenious/bolivar/: bolivar.kt
crates/uniffi/kotlin/sa/ingenious/bolivar/ffi/: bolivar.kt
crates/uniffi/kotlin/sa/ingenious/ffi/: bolivar.kt
crates/uniffi/src/: bolivar.udl  lib.rs
crates/uniffi/tests/: sync_text_api_test.rs
crates/uniffi/tests/common/: mod.rs
src/: aes.rs  (+19 more)
(+86 files in other folders)
