[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/harubi/bolivar"

[workspace.dependencies]
# Core dependencies
aes = "0.8"
byteorder = "1.5"
bytes = "1"
cbc = "0.1"
flate2 = "1.1"
html-escape = "0.2"
indexmap = "2.12"
itertools = "0.14"
lazy_static = "1.5"
md5 = "0.8.0"
num-traits = "0.2"
sha2 = "0.10"
once_cell = "1.21"
regex = "1.12"
rustc-hash = "2.1"
thiserror = "2.0"
unicode-normalization = "0.1"
weezl = "0.1"
rstar = "0.12"
ordered-float = "5.1.0"
geo-index = "0.3.2"
rayon = "1.11"
memmap2 = "0.9"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"

# Python bindings
pyo3 = "0.27"

# Dev dependencies
criterion = { version = "0.8.1", features = ["html_reports"] }
hex = "0.4"
insta = "1.46"

[profile.release]
debug = true
