[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bolivar"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
]

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "crates/python/python"
module-name = "bolivar._bolivar"
profile = "release"
features = ["pyo3/extension-module"]
python-packages = ["bolivar", "pdfminer", "pdfplumber", "sitecustomize"]
include = [
    "crates/python/python/bolivar_autoload.py",
    "crates/python/python/bolivar_autoload.pth",
    "rust-toolchain.toml",
]

[dependency-groups]
bench = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
test = [
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
