[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bolivar"
description = "Fast PDF content extraction, written in Rust with Python bindings"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ahmed Aloufi", email = "936636+harubi@users.noreply.github.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/harubi/bolivar"

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
]

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "crates/python/python"
module-name = "bolivar._bolivar"
profile = "release"
features = ["pyo3/extension-module"]
python-packages = ["bolivar", "pdfminer", "pdfplumber", "sitecustomize"]
include = [
    "crates/python/python/bolivar/_bolivar.pyi",
    "crates/python/python/bolivar/py.typed",
    "crates/python/python/pdfminer/py.typed",
    "crates/python/python/bolivar_autoload.py",
    "crates/python/python/bolivar_autoload.pth",
    "rust-toolchain.toml",
    "LICENSE",
]

[dependency-groups]
bench = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
test = [
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
typecheck = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[tool.ty]

[tool.ty.src]
exclude = [".venv/**", "target/**", "references/**"]

[tool.ty.environment]
root = [".", "crates/python/python"]
python-version = "3.10"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
target-version = "py310"
src = ["crates/python/python"]

[tool.ruff.lint]
extend-select = [
    "ANN",
    "TC",
    "E",
    "W",
    "F",
    "I",
    "PGH003",
    "UP",
    "B",
    "SIM",
    "C4",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = false
allow-star-arg-any = false
