[package]
name = "bolivar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PDF text extraction CLI tools"

[dependencies]
bolivar-core.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
memmap2.workspace = true

[[bin]]
name = "pdf2txt"
path = "src/pdf2txt.rs"

[[bin]]
name = "dumppdf"
path = "src/dumppdf.rs"
