[package]
name = "bolivar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF content extraction library"

[dependencies]
aes.workspace = true
byteorder.workspace = true
bytes.workspace = true
bumpalo = { version = "3.14", features = ["collections"] }
cbc.workspace = true
flate2.workspace = true
html-escape.workspace = true
indexmap.workspace = true
itertools.workspace = true
lasso = "0.7"
lazy_static.workspace = true
md5.workspace = true
num-traits.workspace = true
sha2.workspace = true
once_cell.workspace = true
regex.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
weezl.workspace = true
rstar.workspace = true
ordered-float.workspace = true
geo-index.workspace = true
rayon.workspace = true
memmap2.workspace = true

[features]

[target.'cfg(target_os = "linux")'.dependencies]
criterion-perf-events = { workspace = true }
perfcnt = { workspace = true }

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
insta.workspace = true
stats_alloc.workspace = true
stats_alloc_helper.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true

[[bench]]
name = "alloc_bench"
harness = false

[[bench]]
name = "micro_plane_bench"
harness = false

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "table_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false
