[package]
name = "bolivar-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for bolivar PDF library"

[lib]
name = "_bolivar"
crate-type = ["cdylib"]

[dependencies]
bolivar-core = { path = "../core" }
pyo3 = { workspace = true, features = ["extension-module"] }

[features]
# Forward exact-grouping feature to bolivar-core for pdfminer.six parity
exact-grouping = ["bolivar-core/exact-grouping"]
