[package]
name = "bolivar-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for bolivar PDF library"
publish = false

[lib]
name = "_bolivar"
crate-type = ["cdylib"]

[dependencies]
bolivar-core.workspace = true
bytes.workspace = true
flate2.workspace = true
pyo3.workspace = true
memmap2.workspace = true
serde_json.workspace = true
tokio = { version = "1.40", features = ["sync", "rt", "rt-multi-thread"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
